<resources>
    <string name="app_name">CommuncationInGarden</string>
    <string name="sign_in">Sign In</string>
    <string name="id">ID</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">NAME</string>
    <string name="ok">OK</string>
    <string name="select_garden">Select Garden</string>
    <string name="info">Info</string>
    <string name="long_test_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="community">Community</string>
    <string name="short_test_text">Lorem ipsum</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="my">My</string>
    <string name="sns">SNS</string>
    <string name="add_activity">Add Activity</string>
    <string name="activity_name">Activity Name</string>
    <string name="date">Date ex) yyyy-mm-dd</string>
    <string name="time">Time ex) hh:mm:ss</string>
    <string name="number_of_people">Number of People</string>
    <string name="url">URL ex) discord, kakao talk link</string>
    <string name="home">Home</string>
</resources>
