<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_info_24"
        android:title="@string/home" />

    <item
        android:id="@+id/communityFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_people_24"
        android:title="@string/community" />

    <item
        android:id="@+id/myFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/my" />

    <item
        android:id="@+id/snsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_image_search_24"
        android:title="@string/info" />

</menu>
