<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/addActivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_activity"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activityNameEditText"
        style="@style/AddActivityDialogEditTextStyle"
        android:hint="@string/activity_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addActivityTextView" />

    <EditText
        android:id="@+id/dateEditText"
        style="@style/AddActivityDialogEditTextStyle"
        android:hint="@string/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityNameEditText" />

    <EditText
        android:id="@+id/timeEditText"
        style="@style/AddActivityDialogEditTextStyle"
        android:hint="@string/time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateEditText" />

    <EditText
        android:id="@+id/participantCountEditText"
        style="@style/AddActivityDialogEditTextStyle"
        android:hint="@string/number_of_people"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeEditText" />

    <EditText
        android:id="@+id/urlEditText"
        style="@style/AddActivityDialogEditTextStyle"
        android:hint="@string/url"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participantCountEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>
