<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.communcationingarden.login.model.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/community_in_garden"
            app:layout_constraintBottom_toTopOf="@id/imageGuideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/imageGuideline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idInputLayout"
            style="@style/LoginTextCustomStyle"
            android:hint="@string/id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageGuideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.idLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/LoginTextCustomStyle"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passwordLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signinButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewModel.requestSignIn()}"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintRight_toRightOf="@id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewModel.openSignupScreen()}"
            android:text="@string/sign_up"
            app:layout_constraintLeft_toLeftOf="@id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
